# Siwei

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
scripts/: build-pi-sidecar.mjs  build-pi-sidecar.node-test.mjs  generate-library-fixtures.mjs  generate-library-fixtures.node-test.mjs
sidecars/: siwei-pi-agent-sidecar.mjs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  dialogs.rs  document.rs  import_export.rs  library.rs  mod.rs  recent.rs  search.rs  settings.rs
src-tauri/src/models/: agent.rs  document.rs  import_export.rs  library.rs  mod.rs  recent.rs  search.rs  settings.rs
src-tauri/src/services/: agent_service.rs  agent_tool_executor.rs  agent_tool_host.rs  agent_tools_service.rs  file_service.rs  html_export.rs  import_export_summary.rs  library_service.rs  markdown_export.rs  markdown_parser.rs  mod.rs  opml_format.rs  opml_format_helpers.rs  plain_text_export.rs  recent_service.rs  search_service.rs  settings_service.rs
src-tauri/src/services/agent/: mod.rs  prompt.rs  protocol.rs  runtime.rs  sse.rs  tool_messages.rs  tools.rs
src-tauri/src/services/agent/providers/: claude.rs  mod.rs  openai_compatible.rs
src-tauri/src/utils/: error.rs  id.rs  time.rs
src/app/: App.test.tsx  App.tsx  keyboardShortcuts.ts  workspaceStore.ts
src/hooks/: useAsyncOperation.ts
src/services/: browserFallbackDocument.ts  browserFallbackLibrary.ts  siweiApi.test.ts  (+2 more)
(+161 files in other folders)
