[package]
name = "siwei"
version = "0.6.0"
description = "Siwei desktop app"
authors = ["GuGuGuGun"]
edition = "2021"

[lib]
name = "siwei_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
markdown = "1"
nanoid = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
